weewx change history
--------------------

2.5.0 09/ZZ/13

Weewx now allows easier localization to non-English speaking locales.
In particular, set the environment variable LANG to your locale, and
then weewx date and number formatting will follow local conventions.
Details in a new section in the Customization Guide.

Added aggregate type "minmax" and "maxmin". Thank you user Gary Roderick!

When a template fails, skip only that template, not everything that the
generator is processing.

FineOffset driver now uses the 'delay' field instead of the fixed_block
'read_period' for the archive record interval when reading records from
console memory.

WMR100, Vantage, FineOffset, and WS28xx drivers now emit a null wind
direction when the wind speed is zero.  Same for wind gust.

For WMR9x8 stations, wind chill is now retrieved from the console
rather than calculated in software. Thank you user Peter Ferencz!

For WMR9x8 stations, the first extra temperature sensor (packet code 4)
now shows up as extraTemp1 (instead of outTemp). Thanks again to 
Peter Ferencz.

The LOOP value for daily ET on Vantages was too high by a factor of 10. 
This has been corrected.

Fixed a bug that caused values of ET to be miscalculated when using
software record generation.

Ported to Korora 19 (Fedora 19). Thanks to user zmodemguru!

Plots under 16 hours in length, now use 1 hour increments (instead of 
3 hours).

Fixed rain units in ws28xx driver.

No longer emits "deprecation" warning when working with some versions
of the MySQLdb python driver.



2.4.0 08/03/13

The configuration utility wee_config_vantage now allows you to set
DST to 'auto', 'off', or 'on'. It also lets you set either a time
zone code, or a time zone offset.

The service StdTimeSync now catches startup events and syncs the clock
on them. It has now been moved to the beginning of the list
"service_list" in weewx.conf. Users may want to do the same with their
old configuration file.
