@@ -301,7 +301,8 @@ version = 2.5.0a1
     [[StationRegistry]]
         # To list the weather station at weewx.com, specify the station's URL
         #station_url = http://example.com/weather/
-        driver = weewx.register.StationRegistry
+
+        driver = weewx.restful.StationRegistry
 
 ##############################################################################
 
